[gi] when converting to UTF-8 accept Python Unicode objects as input (Python 2)

https://bugzilla.gnome.org/show_bug.cgi?id=620579